--- a/Transmogrify/ProjectOverview.xaml
+++ b/Transmogrify/ProjectOverview.xaml
@@ -1,12 +1,12 @@
 ﻿<Page x:Class="Transmogrify.ProjectOverview"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Transmogrify"
-        mc:Ignorable="d"
-        Title="Transmogrify - Project"
-        d:DesignHeight="450" d:DesignWidth="800"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Transmogrify"
+    mc:Ignorable="d"
+    Title="Transmogrify - Project"
+    d:DesignHeight="450" d:DesignWidth="800"
 >
     <DockPanel>
         <Ribbon DockPanel.Dock="Top">
@@ -16,28 +16,32 @@
             
             <RibbonTab Header="Project tab">
                 <RibbonGroup Header="Project">
-                    <Button>New</Button>
-                    <Button>Open</Button>
-                    <Button>Save</Button>
+                    <Button Content="New" />
+                    <Button Content="Open" />
+                    <Button Content="Save" />
+                    <Button Content="Exit" Click="ButtonExit_Click" />
                 </RibbonGroup>
                 <RibbonGroup Header="Misc">
-                    <Button>External libraries</Button>
-                    <Button>Run project</Button>
+                    <Button Content="External libraries" />
+                    <Button Content="Run project" />
                 </RibbonGroup>
                 <RibbonGroup Header="Endpoints">
-                    <Button>Add</Button>
-                    <Button>Edit</Button>
-                    <Button>Delete</Button>
+                    <Button Content="Add" />
+                    <Button Content="Edit" />
+                    <Button Content="Delete"/>
                 </RibbonGroup>
                 <RibbonGroup Header="Mappings">
-                    <Button>Add</Button>
-                    <Button>Edit</Button>
-                    <Button>Delete</Button>
+                    <Button Content="Add" />
+                    <Button Content="Edit" />
+                    <Button Content="Delete "/>
                 </RibbonGroup>
             </RibbonTab>
         </Ribbon>
 
-        <Label Content="Hello .NET Core!" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="40"/>
-        <Button Content="Exit" DockPanel.Dock="Bottom" Grid.Row="1" FontSize="20" Click="ButtonExit_Click"/>
+        <Canvas x:Name="projectCanvas" SizeChanged="ProjectCanvas_SizeChanged" >
+            <Ellipse x:Name="endpoint1" Fill="Blue" Height="75" Width="100" Canvas.Top="10" Canvas.Left="10" />
+            <Ellipse x:Name="endpoint2" Fill="Red" Height="75" Width="100" Canvas.Top="10" Canvas.Left="190" />
+            <Ellipse x:Name="endpoint3" Fill="Green" Height="75" Width="100" Canvas.Top="190" Canvas.Left="100" />
+        </Canvas>
     </DockPanel>
 </Page>
