--- a/Transmogrify/Controls/ProjectMapping.xaml
+++ b/Transmogrify/Controls/ProjectMapping.xaml
@@ -6,8 +6,10 @@
              xmlns:local="clr-namespace:Transmogrify.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="150">
-    <Grid Width="150" Height="30">
-        <Line X1="0" X2="150" Y1="15" Y2="15" Stroke="Black" StrokeThickness="3" />
-        <TextBlock Text="{Binding Path=Text}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" />
+    <Grid>
+        <Line X1="0" X2="150" Y1="15" Y2="15" Stroke="Black" StrokeThickness="3" Stretch="Fill" />
+        <Label Height="30" Content="{Binding Path=Text}" Background="White"
+               HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+               HorizontalAlignment="Center" VerticalAlignment="Center" />
     </Grid>
 </UserControl>
