--- a/Transmogrify/Controls/ProjectMapping.xaml
+++ b/Transmogrify/Controls/ProjectMapping.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Transmogrify.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="150">
+             d:DesignHeight="18" d:DesignWidth="150">
     <Grid>
         <Polyline x:Name="line" Points="0,15 150,15" Stroke="Black" StrokeThickness="3" Stretch="Fill" />
-        <Label x:Name="label" Height="30" Content="{Binding Path=Text}" Background="White"
+        <Label x:Name="label" Height="18" Content="{Binding Path=Text}" Background="White"
                HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-               HorizontalAlignment="Center" VerticalAlignment="Center" />
+               HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0" />
     </Grid>
 </UserControl>
