--- a/Transmogrify/Pages/ProjectOverviewControls/ProjectEndpoint.xaml
+++ b/Transmogrify/Pages/ProjectOverviewControls/ProjectEndpoint.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="Transmogrify.Controls.ProjectEndpoint"
+﻿<UserControl x:Class="Transmogrify.Pages.ProjectOverviewControls.ProjectEndpoint"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Transmogrify.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="75">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignWidth="100" d:DesignHeight="75">
     <Viewbox Stretch="Uniform" StretchDirection="Both">
         <Grid Width="100" Height="75">
             <Ellipse Fill="{Binding Path=Fill}" Stroke="Black" StrokeThickness="1" />
