--- a/Transmogrify/Pages/ProjectOverviewControls/ProjectMapping.xaml
+++ b/Transmogrify/Pages/ProjectOverviewControls/ProjectMapping.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="Transmogrify.Controls.ProjectMapping"
+﻿<UserControl x:Class="Transmogrify.Pages.ProjectOverviewControls.ProjectMapping"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Transmogrify.Controls"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="18" d:DesignWidth="150">
     <Grid>
         <Polyline x:Name="line" Points="0,15 150,15" Stroke="Black" StrokeThickness="3" Stretch="Fill" />
