--- a/Transmogrify/Pages/ProjectOverviewControls/ProjectCanvas.xaml
+++ b/Transmogrify/Pages/ProjectOverviewControls/ProjectCanvas.xaml
@@ -5,5 +5,5 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="18" d:DesignWidth="150">
-    <Canvas x:Name="canvas" SizeChanged="canvas_SizeChanged" />
+    <Canvas x:Name="canvas" SizeChanged="Canvas_SizeChanged" />
 </UserControl>
