--- a/Transmogrify/Pages/ProjectOverview.xaml
+++ b/Transmogrify/Pages/ProjectOverview.xaml
@@ -15,6 +15,7 @@
             OpenProject="OverviewRibbon_OpenProject"
             SaveProject="OverviewRibbon_SaveProject"
             ExitApplication="OverviewRibbon_ExitApplication"
+            ShowLibrary="OverviewRibbon_ShowLibrary"
             EndpointCreating="OverviewRibbon_EndpointCreating"
             MappingCreating="OverviewRibbon_MappingCreating"
             MappingCancelled="OverviewRibbon_MappingCancelled"
