--- a/Transmogrify/LibraryWindow.xaml
+++ b/Transmogrify/LibraryWindow.xaml
@@ -2,16 +2,31 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Transmogrify"
-        WindowStartupLocation="CenterOwner"
-        Title="Transmogrify library resources"
+        WindowStartupLocation="CenterScreen"
+        Title="Library resources"
         Height="350" Width="400"
 >
     <DockPanel>
-        <Frame Background="Beige" />
-        
-        <StackPanel DockPanel.Dock="Bottom" Height="50" FlowDirection="RightToLeft" Orientation="Horizontal">
-            <Button Content="Save changes" IsDefault="True" Height="25" HorizontalAlignment="Right" x:Name="btnSave" VerticalAlignment="Top" />
-            <Button Content="Cancel" Height="25" HorizontalAlignment="Right" Margin="0,30,0,0" x:Name="btnCancel" VerticalAlignment="Top" />
+        <Grid>
+            <ItemsControl ItemsSource="{Binding}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="0,0,0,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="25" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding}" />
+                            <TextBlock Text="X" />
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Grid>
+
+        <StackPanel DockPanel.Dock="Bottom" Height="25" Orientation="Horizontal" FlowDirection="RightToLeft">
+            <Button Content="Save changes" IsDefault="True" Margin="10,0,10,0" Click="ButtonSave_Click" />
+            <Button Content="Cancel" Height="25" Click="ButtonCancel_Click" />
         </StackPanel>
     </DockPanel>
 </Window>
